--- a/index.html
+++ b/index.html
@@ -17,33 +17,71 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <!-- Give this main the classes cover and container-fluid -->
+        <nav class="navbar navbar-expand navbar-dark bg-dark">
+            <div class="container-fluid">
+                
+                <a class="navbar-brand" href="index.html"><i class="bi bi-house">Ian's Portfolio</i></a>
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">
+                            Academic 
+                        </a>
+                        <ul class="dropdown-menu dropdownmenu-dark">
+                            <li><a class="dropdown-item" href="gallery.html">Extracurriculars</a></li>
+                            <li><a class="dropdown-item" href="#">Experience</a></li>
+                            <li><a class="dropdown-item" href="#">Resume</a></li>
+                            <li><a class="dropdown-item" href="catle-gallery.html">Education </a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pricing.html">Community Service</a>
+                    </li>
+                    <li clkass="nav-item">
+                        <a class="nav-link" href="certifications.html">Certifications</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <main class="container-fluid cover">
-        <div class="row">
-            <div class="col-md-6"> 
-            <h1 class="front-logo">Ian's Portfolio</h1>
-            </div>
-            <div class="col-md-2 front-nav-1">
-            <a href="castle-gallery.html">
-                <h1>Castle Galleries</h1></h1>
-            </a>
-            </div>
-            <div class="col-md-2 front-nav-2">
-            <a href="pricing.html">
-                <h1>Pricing</h1>
-            </a>
-            </div>
-            <div class="col-md-2 front-nav-3">
-            <a href="contact.html">
-                <h1>Contact</h1>
-            </a>
-            </div>
-            <div class="col-md-2 front-nav-3">
-            <a href="gallery.html">
-                <h1>Galleries</h1>
-            </a>
-            </div>
-        </div>
+            <h1>About Me:</h1>
         </main>
+        <footer class="bg-body-tertiary text-center text-lg-start">
+  <!-- Grid container -->
+            <div class="container">
+    <!--Grid row-->
+        <div class="row">
+      <!--Grid column-->
+            <div class="col-sm-6 text-center">
+                <h5 class="text-uppercase">Links</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!" class="text-body">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-body">Link 2</a>
+                        </li>
+                    </ul>
+            </div>
+            <div class="col-sm-6 text-center">
+                <h5 class="text-uppercase">Links</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!" class="text-body">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-body">Link 2</a>
+                        </li>
+                    </ul>
+            </div>
+    </div>
+  </div>
+
     </body>
 </html>
