Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -50,38 +50,45 @@
         <main class="container-fluid cover">
             <h1>About Me:</h1>
         </main>
-        <footer class="bg-body-tertiary text-center text-lg-start">
+        <footer class="bg-body-tertiary text-center text-lg-start contact">
   <!-- Grid container -->
             <div class="container">
     <!--Grid row-->
+  
         <div class="row">
       <!--Grid column-->
-            <div class="col-sm-6 text-center">
-                <h5 class="text-uppercase">Links</h5>
-
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!" class="text-body">Link 1</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-body">Link 2</a>
-                        </li>
-                    </ul>
+        <div class="col-sm-12 text-center">
+                <h4 class="text-uppercase text-white">Contact Information</h4>
             </div>
-            <div class="col-sm-6 text-center">
-                <h5 class="text-uppercase">Links</h5>
-
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!" class="text-body">Link 1</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-body">Link 2</a>
-                        </li>
-                    </ul>
+            <div class="col-sm-3 text-center">
+                <button class="btn btn-lg btn-light">
+                <i class="bi bi-envelope"></i> Email:
+                </button>
+                <h6 class="text-center text-white">iramos3107@gmail.com</h6>
             </div>
+            <div class="col-sm-3 text-center">
+                            <button class="btn btn-lg btn-light">
+                            <i class="bi bi-mailbox"></i> Mail:
+                            </button>
+                            <h6 class="text-center text-white">94-1211 Farrington Hwy, Waipahu, HI 96797</h6>
+            </div>
+            <div class="col-sm-3 text-center">
+                            <button class="btn btn-lg btn-light">
+                            <i class="bi bi-phone"></i> Phone:
+                            </button>
+                            <h6 class="text-center text-white">1(808)-798-4808</h6>>
+            </div>
+            <div class="col-sm-3 text-center">
+                            <button class="btn btn-lg btn-light">
+                            <a href="https://github.com/iramos0301"><i class="bi bi-github"></i> GitHub:</a>
+                            </button>
+                            <h6 class ="text-center text-white">iramos0301</h6>
+            </div>
+      <!--Grid column-->
     </div>
+    <!--Grid row-->
   </div>
+  <!-- Grid container -->
 
     </body>
 </html>
