Added footer contact information to all webpages and added placeholder code for webpages

--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -21,25 +21,25 @@
                 
                 <a class="navbar-brand" href="index.html"><i class="bi bi-house">Ian's Portfolio</i></a>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="pricing.html">Pricing </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact </a>
-                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">
-                            Galleries 
+                            Academic 
                         </a>
                         <ul class="dropdown-menu dropdownmenu-dark">
-                            <li><a class="dropdown-item active" href="gallery.html">All Galleries</a></li>
+                            <li><a class="dropdown-item active" href="extracurriculars.html">Extracurriculars</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Party Photos</a></li>
-                            <li><a class="dropdown-item" href="#">Landscapes</a></li>
-                            <li><a class="dropdown-item" href="catle-gallery.html">Castles </a></li>
-                            <li><a class="dropdown-item" href="#">Cats</a></li>
+                            <li><a class="dropdown-item" href="experiences.html">Experience</a></li>
+                            <li><a class="dropdown-item" href="resume.html">Resume</a></li>
+                            <li><a class="dropdown-item" href="education.html">Education </a></li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="communityService.html">Community Service</a>
+                    </li>
+                    <li clkass="nav-item">
+                        <a class="nav-link" href="certifications.html">Certifications</a>
+                    </li>
+                    
                     </li>
                 </ul>
             </div>
@@ -99,5 +99,39 @@
             </div>
         </div>
         </main>
+        <footer class="bg-body-tertiary text-center text-lg-start contact">
+            <div class="container">
+  
+        <div class="row">
+        <div class="col-sm-12 text-center">
+                <h4 class="text-uppercase text-white">Contact Information</h4>
+            </div>
+            <div class="col-sm-3 text-center">
+                <button class="btn btn-lg btn-light">
+                <i class="bi bi-envelope"></i> Email:
+                </button>
+                <h6 class="text-center text-white">iramos3107@gmail.com</h6>
+            </div>
+            <div class="col-sm-3 text-center">
+                            <button class="btn btn-lg btn-light">
+                            <i class="bi bi-mailbox"></i> Mail:
+                            </button>
+                            <h6 class="text-center text-white">94-1211 Farrington Hwy, Waipahu, HI 96797</h6>
+            </div>
+            <div class="col-sm-3 text-center">
+                            <button class="btn btn-lg btn-light">
+                            <i class="bi bi-phone"></i> Phone:
+                            </button>
+                            <h6 class="text-center text-white">1(808)-798-4808</h6>>
+            </div>
+            <div class="col-sm-3 text-center">
+                            <button class="btn btn-lg btn-light">
+                            <a href="https://github.com/iramos0301"><i class="bi bi-github"></i> GitHub:</a>
+                            </button>
+                            <h6 class ="text-center text-white">iramos0301</h6>
+            </div>
+        </div>
+        </div>
+    </footer>
     </body>
 </html>
