--- a/index.html
+++ b/index.html
@@ -17,46 +17,78 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <nav class="navbar navbar-expand">
             <div class="container-fluid">
                 
                 <a class="navbar-brand" href="index.html"><i class="bi bi-house">Ian's Portfolio</i></a>
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">
                             Academic 
                         </a>
                         <ul class="dropdown-menu dropdownmenu-dark">
-                            <li><a class="dropdown-item" href="gallery.html">Extracurriculars</a></li>
-                            <li><a class="dropdown-item" href="#">Experience</a></li>
-                            <li><a class="dropdown-item" href="#">Resume</a></li>
-                            <li><a class="dropdown-item" href="catle-gallery.html">Education </a></li>
+                            <li><a class="dropdown-item" href="extracurriculars.html">Extracurriculars</a></li>
+                            <li><a class="dropdown-item" href="experiences.html">Experience</a></li>
+                            <li><a class="dropdown-item" href="resume.html">Resume</a></li>
+                            <li><a class="dropdown-item" href="education.html">Education </a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pricing.html">Community Service</a>
-                    </li>
-                    <li clkass="nav-item">
-                        <a class="nav-link" href="certifications.html">Certifications</a>
+                        <a class="nav-link text-white" href="communityService.html">Community Service</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link text-white" href="certifications.html">Certifications</a>
                     </li>
                     
                     </li>
                 </ul>
             </div>
         </nav>
+        <header>
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <h1>Ian Gabriel Ramos</h1> 
+                </div>
+                <div class="col-sm-12 text-center">
+                    <img src="#">
+                </div>
+            </div>
+        </header>
         <main class="container-fluid cover">
-            <h1>About Me:</h1>
+            <div class="text-center">
+                <h1>Who Am I?</h1>
+                <p>Hello world! My name is Ian Gabriel Ramos and I am currently
+                   a student at Waipahu High School. Throughout my life, I
+                   didn't do much. Childhood was a loop that included games,
+                   school, homework, and my club aquaponics. This continued on
+                   to middle school, especially with the coronavirus lock down,
+                   but high school would be a change. It was during this time
+                   I began to become more ambitious, joining various clubs such
+                   as esports, judo, key club, math team, and interact club. 
+                   I started challenging myself educationally by taking AP 
+                   classes and early college classes in the pursuit of an 
+                   Associate's Degree in STEM pre-engineering. I also began
+                   exploring interests that I have such as reading books,
+                   judo, analyzing literature, and even video editing. This is 
+                   all to say that initially a room hermit that didn't pursue 
+                   anything beyond the minimum, I am now a person that searches 
+                   for wonder and awe in the world through challenges, personal
+                   projects, and exploration.
+                </p>
+            </div>
+            <hr class="hr hr-blurry">
+            <div class="text-center">
+                <h1 class="text-lg">Career and Education Objectives</h1>
+                <ol>
+                    <li>ASDF</li>
+                    <li>ASDF</li>
+                </ol>
+            </div>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
-  <!-- Grid container -->
             <div class="container">
-    <!--Grid row-->
   
         <div class="row">
-      <!--Grid column-->
         <div class="col-sm-12 text-center">
                 <h4 class="text-uppercase text-white">Contact Information</h4>
             </div>
@@ -84,11 +116,10 @@
                             </button>
                             <h6 class ="text-center text-white">iramos0301</h6>
             </div>
-      <!--Grid column-->
-    </div>
-    <!--Grid row-->
-  </div>
-  <!-- Grid container -->
+        </div>
+        </div>
+    </footer>
+ 
 
     </body>
 </html>
