--- a/certifications.html
+++ b/certifications.html
@@ -44,40 +44,49 @@
                 </ul>
             </div>
         </nav>
-        <div class="col-12">
-        <header>
-            <h1>Pricing Details</h1>
-        </header>
-        <div>
+        <h1>Certifications</h1>
         <main>
-            <div class="table-responsive">
-                <table class="table table-hover table-bordered">
-                    <thead class="thead-dark">
-                        <tr>
-                            <td>Size</td>
-                            <td>Cost Unframed</td>
-                            <td>Cost Framed</td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>8x10</td>
-                            <td>$15</td>
-                            <td>$23</td>
-                        </tr>
-                        <tr>
-                            <td>11x14</td>
-                            <td>$19</td>
-                            <td>$28</td>
-                        </tr>
-                        <tr>
-                            <td>16x20</td>
-                            <td>$26</td>
-                            <td>$35</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                        <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                     </button>
+</div>
+</div>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
             <div class="container">
