Added tables showing courses and grades on education.html

--- a/education.html
+++ b/education.html
@@ -28,7 +28,7 @@
                         </a>
                         <ul class="dropdown-menu dropdownmenu-dark">
 
-                            <li><a class="dropdown-item" href="education.html">Education </a></li
+                            <li><a class="dropdown-item" href="education.html">Education </a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="extracurriculars.html">Extracurriculars</a></li>
                             <li><a class="dropdown-item" href="experiences.html">Experience</a></li>
@@ -47,23 +47,127 @@
             </div>
         </nav>
         <header>
-                <h1>Castle Gallery</h1>
+                <h1>Education</h1>
         </header>
-        <main >
-           <div class="row">
-               <div class="col-sm-4">
-                   <a href="">
-                   <img class="img-thumbnail rounded-circle" src ="https://media.istockphoto.com/id/1159222457/photo/bodiam-castle-east-sussex-england-historic-bodiam-castle-and-moat-in-east-sussex.jpg?s=612x612&w=0&k=20&c=ukT5y8k10_1F-AfaM3CdWENwiXNImEGTfncd1-Kh24Q=">
-                   </a>
-               </div>
-           </div>
-           <div class="row">
-               <div class="col-sm-4">
-                   <a href="">
-                   <img class="img-thumbnail rounded-circle" src="https://media.istockphoto.com/id/152021983/photo/medieval-town-of-carcassonne-at-sunset.jpg?s=612x612&w=0&k=20&c=KxiRgfvZBtT8GcO_Ax_kCTyTcMZu-cVJemXN3OfYRPw=" >
-                   </a>
-               </div>
-           </div>
+        <main >          
+            <div class="table-responsive row">
+                <div class="col-sm-12">
+                    <h1> High School Education: Waipahu High School</h1>
+                </div>
+                <div class=""col-sm-12>
+                    <table class="table table-hover table-bordered">
+                        <thead class="thead-dark">
+                            <tr>
+                                <td>Subject</td>
+                                <td>9th Grade</td>
+                                <td>10th Grade</td>
+                                <td>11th Grade</td>
+                                <td>12th Grade</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Math</td>
+                                <td>A (Geometry)</td>
+                                <td>A (Adv. Alg. 2)</td>
+                                <td>A (Adv. Trig/Precalc.)</td>
+                                <td>N/A</td>
+                            </tr>
+                            <tr>
+                                <td>English</td> 
+                                <td>A (Eng. Grade 9)</td>
+                                <td>A (Eng. Grade 10)</td>
+                                <td>A (AP English Lit. & Comp.)</td>
+                                <td>N/A</td>           
+                            </tr>
+                            <tr>
+                                <td>Science</td>
+                                <td>A (Integ. Sci.)</td>
+                                <td>A (Biology)</td>
+                                <td>A (Physical Science)</td>
+                                <td>N/A</td>
+                            </tr>
+                            <tr>
+                                <td>Social Studies</td>
+                                <td>A (World History/Culture)</td>
+                                <td>A (AP US History)</td>
+                                <td>A (Participation in Democracy/Modern History of Hawaii)</td>
+                                <td>N/A</td>
+                            </tr>
+                            <tr>
+                                <td>CTE</td>
+                                <td>A (IET Core)</td>
+                                <td>A (Cybersecurity 1)</td>
+                                <td>A (Cybersecurity 2)</td>
+                                <td>N/A</td>
+                            </tr>
+                            <tr>
+                                <td>Elective</td>
+                                <td>A (Japanese 1)</td>
+                                <td>A (Japanese 2)</td>
+                                <td>A (Ceramics 1)</td>
+                                <td>N/A</td>
+                            </tr>
+                            <tr>
+                                <td>Elective</td>
+                                <td>A (Physical Education)</td>
+                                <td>A (Health Today/Career and Life Planning)</td>
+                                <td>S (Teacher Assistant)</td>
+                                <td>N/A</td>
+                            </tr>
+                            <tr>
+                                <td>GPA</td>
+                                <td>4.091</td>
+                                <td>4.250</td>
+                                <td>N/A</td>
+                                <td>N/A</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="table-responsive row">
+                <div class="col-sm-12">
+                    <h1> Early College Education: Leeward Community College & West Oahu College</h1>
+                </div>
+                <div class="col-sm-12">
+                    <table class="table table-hover table-bordered">
+                        <thead class="thead-dark">
+                            <tr>
+                                <td>Semester</td>
+                                <td>2020 - 2021</td>
+                                <td>2021 - 2022</td>
+                                <td>2022 - 2023</td>
+                                <td>2023 - 2024</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Fall</td>
+                                <td>N/A</td>
+                                <td>MUS 107: A</td>
+                                <td>HWST 107: A MATH 103: A</td>
+                                <td>CHEM 162: A CHEM 162L: A MATH 241: A</td>
+                                <td>N/A</td>
+                            </tr>
+                            <tr>
+                                <td>Spring</td>
+                                <td>N/A</td>
+                                <td>HIST 151: A</td>
+                                <td>ENG 100: A MATH 140X: A</td>
+                                <td>ICS 111: A MATH 242: A</td>
+                            </tr>
+                            <tr>
+                                <td>Summer</td>
+                                <td>IS 103: A</td>
+                                <td> ASTR 110: A ECON 130: A</td>
+                                <td>CHEM 161: A CHEM 161L: B</td>
+                                <td>N/A</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </main>
         </div>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
