Added image of Ian to the home page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                     <h1>Ian Gabriel Ramos</h1> 
                 </div>
                 <div class="col-sm-12 text-center">
-                    <img src="#">
+                    <img src="https://previews.dropbox.com/p/thumb/ACQplJnpvW_8CbbAAlQVlXM7w6ISAG78SntrnvxbPeMOUM6FQox1LT9npKLso1A0osCvht2aozJ7iAHisWPI2uw0WDy4g5XFhVQFZCwK69YHdwujAHoL8uzJntOYvdVJ2Ed5kwe6ltk_75lx8zfrDwWGsac80fRJbcChamzB4WbgkdTk-KUd0BuDGJhVBC8ntLyoaawh8zRShrB2ETHmNwPV_oHBTlXpnCB2h8T_hWGy-n-gE3SVSmH846rlAP2tpkNRDGa1MklaLiwYpr1r8R_kI2nTfYzhNwTyTPw28rvsPeFHksrT8nK3NQ1SuI4P_pl4k65R7r-8C8p_p2W_4v9d/p.jpeg"
+                    height="300" width="225">
                 </div>
             </div>
         </header>
