Added skeleton for experience.html. Need to add information and pictures

--- a/experiences.html
+++ b/experiences.html
@@ -46,7 +46,41 @@
             </div>
         </nav>
         <main class="container-fluid cover">
-            <h1>About Me:</h1>
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <h1>Projects</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <h1>Community Service</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="">
+                </div>
+                <div class="col-sm-4">
+                    <img src="">
+                </div>
+                <div class="col-sm-4">
+                    <img src="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 text-center">
+                    <h1>Phi Theta Kappa</h1>
+                    <h2>Example</h2>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <h1>Key Club</h1>
+                    <h2>Example</h2>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <h1>NTHS</h1>
+                    <h2>Example</h2>
+                </div>
+            </div>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
             <div class="container">
