Added a link to  resume in navbar and filled out objective list

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <ul class="dropdown-menu dropdownmenu-dark">
                             <li><a class="dropdown-item" href="extracurriculars.html">Extracurriculars</a></li>
                             <li><a class="dropdown-item" href="experiences.html">Experience</a></li>
-                            <li><a class="dropdown-item" href="resume.html">Resume</a></li>
+                            <li><a class="dropdown-item" href="https://drive.google.com/file/d/1yu5LA78L0KZBI9Cdqjo_9QPJUhFnMzwo/view?usp=sharing">Resume</a></li>
                             <li><a class="dropdown-item" href="education.html">Education </a></li>
                         </ul>
                     </li>
@@ -47,7 +47,7 @@
         <header>
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <h1>Ian Gabriel Ramos</h1> 
+                    <h1>Ian Gabriel C. Ramos</h1> 
                 </div>
                 <div class="col-sm-12 text-center">
                     <img src="https://previews.dropbox.com/p/thumb/ACQplJnpvW_8CbbAAlQVlXM7w6ISAG78SntrnvxbPeMOUM6FQox1LT9npKLso1A0osCvht2aozJ7iAHisWPI2uw0WDy4g5XFhVQFZCwK69YHdwujAHoL8uzJntOYvdVJ2Ed5kwe6ltk_75lx8zfrDwWGsac80fRJbcChamzB4WbgkdTk-KUd0BuDGJhVBC8ntLyoaawh8zRShrB2ETHmNwPV_oHBTlXpnCB2h8T_hWGy-n-gE3SVSmH846rlAP2tpkNRDGa1MklaLiwYpr1r8R_kI2nTfYzhNwTyTPw28rvsPeFHksrT8nK3NQ1SuI4P_pl4k65R7r-8C8p_p2W_4v9d/p.jpeg"
@@ -79,10 +79,13 @@
             </div>
             <hr class="hr hr-blurry">
             <div class="text-center">
-                <h1 class="text-lg">Career and Education Objectives</h1>
+                <h1 class="text-lg">Career and Future Objectives</h1>
                 <ol>
-                    <li>ASDF</li>
-                    <li>ASDF</li>
+                    <li>Graduate with an Associate's Degree in Pre-Engineering and High School Diploma</li>
+                    <li>Gain work experience through various internships regarding web development</li>
+                    <li>Participate in HAACs, CTSO, and Congressional App Challenge</li>
+                    <li>Earn a job as either a software engineer or mechanical engineer</li>
+                    <li>Move out of Hawaii and live on my own during college</li>
                 </ol>
             </div>
         </main>
