--- a/experiences.html
+++ b/experiences.html
@@ -16,36 +16,36 @@
         <title>Portfolio</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <body class="site">
+        <nav class="navbar navbar-expand">
             <div class="container-fluid">
                 
                 <a class="navbar-brand" href="index.html"><i class="bi bi-house">Ian's Portfolio</i></a>
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">
                             Academic 
                         </a>
                         <ul class="dropdown-menu dropdownmenu-dark">
+                            <li><a class="dropdown-item current-link" href="experiences.html">Experience</a></li>
+                            <hr>
                             <li><a class="dropdown-item" href="extracurriculars.html">Extracurriculars</a></li>
-                            <li><a class="dropdown-item" href="experiences.html">Experience</a></li>
-                            <li><a class="dropdown-item" href="resume.html">Resume</a></li>
+                            <li><a class="dropdown-item" href="https://drive.google.com/file/d/1yu5LA78L0KZBI9Cdqjo_9QPJUhFnMzwo/view?usp=sharing">Resume</a></li>
                             <li><a class="dropdown-item" href="education.html">Education </a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="CommunityService.html">Community Service</a>
+                        <a class="nav-link text-white" href="communityService.html">Community Service</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="certifications.html">Certifications</a>
+                        <a class="nav-link text-white" href="certifications.html">Certifications</a>
                     </li>
-
                     
                     </li>
                 </ul>
             </div>
         </nav>
-        <main class="container-fluid cover">
+        <main class="container cover">
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <h1>Projects</h1>
@@ -70,7 +70,10 @@
             <div class="row">
                 <div class="col-sm-4 text-center">
                     <h1>Phi Theta Kappa</h1>
-                    <h2>Example</h2>
+                    <h3>Waipahu Got Talent Setup & Cleanup - April, 2023</h3>
+                    <h3>Cookie Corner Fundraiser - October, 2023</h3>
+                    <h3>Waimea Valley Cleanup - January, 2024</h3>
+                    <h3>Queen Lili'uokalani Botanical Garden Cleanup - February, 2024</h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <h1>Key Club</h1>
@@ -82,7 +85,7 @@
                 </div>
             </div>
         </main>
-        <footer class="bg-body-tertiary text-center text-lg-start contact">
+        <footer class="bg-body-tertiary text-center text-lg-start contact container-fluid">
             <div class="container">
   
         <div class="row">
