--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -44,37 +44,12 @@
                 </ul>
             </div>
         </nav>
-        <main class="container">
-            <nav class="navbar navbar-expand navbar-dark bg-dark">
-                <div class="container-fluid">
-                    
-                    <a class="navbar-brand" href="index.html"><i class="bi bi-house">Ian's Portfolio</i></a>
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">
-                                Academic 
-                            </a>
-                            <ul class="dropdown-menu dropdownmenu-dark">
-    
-                                <li><a class="dropdown-item" href="education.html">Education </a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="extracurriculars.html">Extracurriculars</a></li>
-                                <li><a class="dropdown-item" href="experiences.html">Experience</a></li>
-                                <li><a class="dropdown-item" href="resume.html">Resume</a></li>
-    >
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="communityService.html">Community Service</a>
-                        </li>
-                        <li clkass="nav-item">
-                            <a class="nav-link" href="certifications.html">Certifications</a>
-                        </li>
-                        </li>
-                    </ul>
+        <main class="container cover">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1 class="text-center"> Extracurriculars </h1>
                 </div>
-            </nav>
-            <h1 class="text-center"> Extracurriculars </h1>
+            </div>
             <div class="row">
                 <div class="col-sm-4 text-center">
                     <h3>ClubName</h3>
