Added images, information, and fixed organization for experiences.html

--- a/experiences.html
+++ b/experiences.html
@@ -30,9 +30,11 @@
                             <li><a class="dropdown-item current-link" href="experiences.html">Experience</a></li>
                             <hr>
                             <li><a class="dropdown-item" href="extracurriculars.html">Extracurriculars</a></li>
-                            <li><a class="dropdown-item" href="https://drive.google.com/file/d/1yu5LA78L0KZBI9Cdqjo_9QPJUhFnMzwo/view?usp=sharing">Resume</a></li>
                             <li><a class="dropdown-item" href="education.html">Education </a></li>
                         </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="https://drive.google.com/file/d/1yu5LA78L0KZBI9Cdqjo_9QPJUhFnMzwo/view?usp=sharing">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="communityService.html">Community Service</a>
@@ -48,40 +50,76 @@
         <main class="container cover">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <h1>Projects</h1>
+                    <h1>Experiences/Projects</h1>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <iframe width="415" height="245" src="https://www.youtube.com/embed/HekGCEcxyf0?si=mWVkMbv8O0V0pDbl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="https://lh3.googleusercontent.com/pw/AP1GczNBzr2mwavRvjG0gvC4Dd_R7oYwn7U39K_ROtNCf7bJQbdimDyxEAsUJqLiqY9mYIHq2ylwMcIQYI1XvjD_C0QM2JnjoAnuk-7NKn-Ohs3gI6okyUBIaqaOpZWVeET02GPR0s37MysRhjiTh3n0ggv8FSktmDuIfNqt5zgZKrim-U1iuJY6RFecDx1VL39YF1zpXbYR6rS4maVM_gzBhdZDmcCbgIlEHIpKDQLeeX2tpCmr2xsHzyRWvsNKq_9k9DRyEDVw-IS0IoeX8vrp5BJomFuLaZD0jMnhgxKqVAiAYzW67LlVvwYrS14u9c84WwftGGfiUjg6uJPJwv4g_zgcEDrwWwRhfkeBFqXebK79tx9UU3G3lST98xX14ljVhZ9niwPo70cjFSzTkKv1WRRNhLkKavO-5JbGXt6LP7lAVNhdEoya8EM9rqGRotqopurJXqqpmbTW03qtaBKBHnJ4q9RXob_8Y-hWL7UF_CZ-rdVhBr7UbypKre-a6B7NZRXw_7sGK7tdFul6qNd4sQKhWZpPn4vclBJ8e-rgL20O0iGkgyhRyOzB5xWoYUeR3eigudnPRvcCLPx8Z4ZVNgmi5yJeXAAC2NgwNp1TR3U7_Vstn8OmZLOqGjeXpEh-MVVhz6tiDN-KPd_JlsDbtOu6zxYf0WPr7ZKko-ceAHVMtC380mZLV7DAvA_ua8XyVN7Zp-9V9h0KVOBNmw-Lt-eivWJJ8NaaOud_M6rp3BiqJrnnmgmxUD3gEIfXIyQBVGYy1SSgvmdYHZdGpJQDL0MsUg93DOJmpfJRWra1ncotHIYNC-seK2e1D2XwTEzpeiQujVfQnrGtc2M6P1qnmrvtEKuGgqdwWo1D9XTEts4eUI7rCi1HJ-D8QQyOv6Hzklox8gZMKw2Nmx0Dnq5NWnYSWSe6JL6--6PzX9QtlqBztN4eEcDtR-O5T0f7IBXm8cE-eZnj6UZ0Z-LDQRfNYtANWEhCk2PcDmhuTCy2wdeF-5HmA4RQO49oCKlMp7AIY3MhTnqTN80GR892n_UtsN0oTbISd9UudR6Z=w1942-h1456-s-no-gm?authuser=0"
+                        width="415" height="245">
+                    </div>
+                    <div class="col-sm-4">
+                        <p class="codepen" data-height="245" data-default-tab="html,result" data-slug-hash="eYLwBNW" data-pen-title="Web Page" data-user="2501300988" style="height: 245px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+                            <span>See the Pen <a href="https://codepen.io/2501300988/pen/eYLwBNW">
+                            Web Page</a> by Ian Gabriel Ramos (<a href="https://codepen.io/2501300988">@2501300988</a>)
+                            on <a href="https://codepen.io">CodePen</a>.</span>
+                        </p>
+                        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4 text-center">
+                        <h1>STEMworks Solution</h1>
+                        <p>Caption</p>
+                        <a href="https://drive.google.com/file/d/1g-mclc6mrmQqoLcMyD1jmCGvHzvf7MOn/view?usp=sharing"><p>Business Plan</p></a>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <h1>UTI Presentation</h1>
+                        <p>Caption</p>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <h1>Task List Web Page</h1>
+                        <p>Caption</p>
+                        <a href="https://codepen.io/2501300988/pen/eYLwBNW"><p>Task List</p></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 text-center">
+                        <h1>CTSO</h1>
+                        <p>Caption</p>
+                    </div>
                 </div>
             </div>
+            <hr>
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <h1>Community Service</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
-                    <img src="">
-                </div>
-                <div class="col-sm-4">
-                    <img src="">
-                </div>
-                <div class="col-sm-4">
-                    <img src="">
+                <div class="col-sm-12">
+                    <img src="https://lh3.googleusercontent.com/fife/ALs6j_HpAsQMZvXs3ju8Pc0CajpXYKk6wCZNTlTOGZg2Z00DKOYLLWyPrwz8IwPAZv3UhrVyqHCKU9aI-Of5JNbF_L7gcvjjNRzS3coh0JxntMh0Cr--kWicMjy9KtE4bRnLmoi1Gp30NOjwyjIKIL29mSQBlecF1RmKLbVnRd03yZOaivT1hnyxrgIg_MVXC32EYAUYDi1pFLeV49-L1rakGDSM83SNvATKM4Oh5NuK7FjkB6YM25u_Uy2Tg_QBwg0zwU-MgIuxqfR0nmbI4cpNl8QzfodJnh0LXtYXBgT8BT-83bVtHLrGPhWz4pisZ30rDBb3j2jWpAZKArn3RLml-UJYEikdAZWSMCDU2a7v6llJA5Zq7EutoHNr4k4758P1h6nR1hSC7uFfmgBHUAgJwll9dSjW7lO4L3sE7kJ3I6h1PVMIo9mIKRjy0Xq0s6e5Sc36ErbcUV23wanGNp5rYVSN6n1SKKv1UByuKR-YwA8muJnTvlkHG9z7Y7OIUmh4faFoOM6zmw-qLF2Lwu-xNLrbllM88CGolwKCzuXmm5gMUfSmDVq8HMKrncoG0l_UnKpZElYolJQ8o1jpVi0Wyzjo38_7Y_XdcBZ_bO5R2qDu1HU8Po0hw1QzMZjjvJ0uJ57ldmt8ERCaFxfkwbRpHHPKs7xAk4jiPaXG3IHYqakzWaIr0Pj1Rat85dzLKRuUZntWWhYRIeNT1UVrd_LNty2kXnn1hGRfMfeRnsIsFbGm4HOZM6FqwUP9TwvaSMUMp4C5Nd3ZRKEa8IK39vVlWHCwCCLLRx9e6SvDpjcEzMYYLvq76U1c8Z0Kkjx2La073iP7WgOQ2yrMKyrDNuqis9NJjZIxs4IndvjKLeFM5uBfAukZTNErlff718_cNiaIsg8LoZXJXXLApL-ankHTHjcTryamlT4r1pyP2ts76iYElwIBLg9LzJosg_EB8gRjqVrKSTFCM8hCbT1ssjhCV2R0TCrL7kC5T5tACrInu8ddVNr1Z3dTx7o2VNOcl1NtVT2K5A1jmQmxWZ3jxKuXPmKmQw8TK_JjUFWoezAtkTl-56U-sTbZt14rmfNuUQIaGiEyEb1g845_aUYHWTbos6uZz1wdc65bDdG5ynkWuzNQUIONRyJAshezo8DFbUuty91hKdd39Ok8RE2uaScZNDaHVv7wdBXDLUvFmGAQKWZGKMesfEueCTziy4Q3SewnHM5W6c8QQ-o9Qb6dAqhrRS0e9zZGXObYpgbeuvM5EDWzf9UrU3JmKoTI79eotmDG-ZjuIjO6RU90_p9ALJCaMTpMfJpVrF3Itc4aT9dukOkicFCHlV1XcR3fwTm2uRoTig_73MwFNsLlZNRB6EW2rJb-s6pSP8qUk2cFZKYnI3OO0Oqp2AcTcgyc9dDJMYozlNuKp2R1JEyLdd6aF9zWcVpGMHgCb8myrOsCvD3y3GU3V0TwypQbJqe3I8nN4LwCL1h_pluZgETUUk9N2PnmsWXFvxb7a2EwajO1WfqZ8wFrnG1D96P-sBs7OIyEmqv5eMf9TrwyhWjqafOxqFf9e55poWZqY93Pfvfne0C-sZlN37Chyfanc6DRWen_T_uyxxW5RLR7jaKqe4fejDKnEcNAwi8in4PdVO-fvKVAvAzQbHzKLAZ-NLcgb7zZl7udKeXDF8ILoL7TJGx-TNSzp4Aw84Y1a--_lp5D5KRFBN6vIbq-NXPVBayH4fODOOhI1IFwYr5NnIdx-r8Qcl7LwZtcOA0GRs6YWgeG90K13ufidm4SNMfo3vyJ2dBJVgyh-6SqhmNy8iCarvsC3-4bBb318Gil3MBhxNDh43wKXjwS6A99xEXSmia4cNizTLHVm_m1EFf4BVUwfMBpwr7rQUlTP70WkiFT-e3LSFFq6mtcZhAY3UwRceElGuxZkznI5W64y02dql81SsoicRPNu2JhV1gBnsFVCRC07fT6tNdLBaKaJHTJ6fqGVqnK2T8MyLkKmxKXlqWSrJwB0Roy-SZsWMBPXoMsZBJSFZTo6IYCN6W_XttzoS2spc5WdV0-XLhqsYAJpj2jNez3rbs3P3IURurXysy9QDZJLSzgXbhl2y85AVCEHmTW9yRt0LAZIOLfhDdtx7c9-8WRJRT98wIMi1UrUFPA14CfxHjgoHUnvA4OLCRPKec11JXaL9yXKFFqCyx4ITcFXAglOlltSY62Vll7fmqF0QsalF_QfxRYLT43l3_unBuH8LMwhQwGQSpWItQWiJ_WNlqv048Sf8tGuSY93H2B0jJ3VLAj7ayVJGE8V2BdzGkrnAJtiWrnfS0s9R624Xtj4czmdjgyb_Gi296tssvvrphAr9zxOcBU88-lgxmxe6IttR-fqwkWgXjnt_tMKviBjQe1OsfXqVI_HJLjqOcVQjmUxfDZ5X-qKvLk0-QUMqTx-HzuRvntOHv_1dLV1IOSj-Q7ylpPkK93_7-b1uGb2VPgbPBqLv3hoXg9OXffBQwgzXWpbXy9QMH8sIeeUX3xtAHHeHa6O9-xNWerklDeRJXJ3iPe5_39HCHTbhJbguX75ItGfXXyKFLNuxXuQfju9707dpliawq4hraBx80w1b7iKZvEWK_WlGwvrIRu65LMPBJ8-S9XvSrRMpfLS2F5ZBVqjb9ti8feQrXbmmZfTPUFrXTHvYKB3jpILBgF1jDfKMsuJQPxW7Fyy7UgO60Uo55oFlPUHrwf6oUjwaqtbou1Xg5iDlgdgmipw3nPQKCx2zsvnTp-tahZMhf8E6NNvygdUDmnhphQAwsSj6xATCVtLhuTvDbg_k1OyAv2yydF6YAlTU_hfv4BIZj3BvE2yTjMeAe5J9uBFAgk9M4ir0yWnHJmW7BfCjANl_JWwWPruVw9gxcFsD95zkmBjMGtsxqGfSN50TtSxYjJ1eEYchGC8swgHB8r-ZnrdO1Y_7jyn6HwAoRg5Alhtqyh8bMDSCCFbzXKpVS4UVgwmAMzxus9S8zxli5maklXcAQ0GZqeT3L0AgXRYPUp5PAmaooPHDyxT0223tF5sRmb1StFXMIQh2b2zd8G2G0pNmN345xPKa8uHljvmA086GcLTA52jI_JINvqmh6kzw8ZcpFEjsqbXhitHNGfsI5L5K-WC79leukq_Z0pYJIUcm4RGbz52IdyGCFd-DHrqjqtp1RiE46KcxjAJwwekM7dfVUhzb6a8cGNcjE5kMDX9vulnqZhDPMCthW06EzZSZN01dKELc6SxwZUAm-lwOP1x475PHsQIrg9OzlkbFv_oV8O5VCjDaiIyuPc70QtjqKH2P82vFgz7sFa-E6t__8-8RQrV9NmK0WE-c6_jC4_AAarQlIIZxwihmDNG2AQIUTR1L6hqGo6nwg1E3k_I_yxPPDJWG7kP3qpRzM=s1942-w1942-h1456-s-no-gm?authuser=0"
+                    width="50%" height="500" class="center">
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4 text-center">
                     <h1>Phi Theta Kappa</h1>
-                    <h3>Waipahu Got Talent Setup & Cleanup - April, 2023</h3>
-                    <h3>Cookie Corner Fundraiser - October, 2023</h3>
-                    <h3>Waimea Valley Cleanup - January, 2024</h3>
-                    <h3>Queen Lili'uokalani Botanical Garden Cleanup - February, 2024</h3>
+                    <p>Waipahu Got Talent Setup & Cleanup - April, 2023</p>
+                    <p>Cookie Corner Fundraiser - October, 2023</p>
+                    <p>Waimea Valley Cleanup - January, 2024</p>
+                    <p>Queen Lili'uokalani Botanical Garden Cleanup - February, 2024</p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <h1>Key Club</h1>
-                    <h2>Example</h2>
+                    <p>Salvation's Army Angel Tree - December, 2023</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <h1>NTHS</h1>
-                    <h2>Example</h2>
+                    <h1>Outside</h1>
+                    <p>LCC Community Fair</p>
+                    <p>St. Joseph cleanup</p>
                 </div>
             </div>
         </main>
