--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -16,28 +16,27 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <nav class="navbar navbar-expand">
             <div class="container-fluid">
                 
                 <a class="navbar-brand" href="index.html"><i class="bi bi-house">Ian's Portfolio</i></a>
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">
                             Academic 
                         </a>
                         <ul class="dropdown-menu dropdownmenu-dark">
-                            <li><a class="dropdown-item active" href="extracurriculars.html">Extracurriculars</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="experiences.html">Experience</a></li>
-                            <li><a class="dropdown-item" href="resume.html">Resume</a></li>
+                            <li><a class="dropdown-item current-link" href="extracurriculars.html">Extracurriculars</a></li>
+                            <hr>
+                            <li><a class="dropdown-item current-link" href="experiences.html">Experience</a></li>
                             <li><a class="dropdown-item" href="education.html">Education </a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="communityService.html">Community Service</a>
+                        <a class="nav-link text-white" href="https://drive.google.com/file/d/1yu5LA78L0KZBI9Cdqjo_9QPJUhFnMzwo/view?usp=sharing">Resume</a>
                     </li>
-                    <li clkass="nav-item">
-                        <a class="nav-link" href="certifications.html">Certifications</a>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="certifications.html">Certifications</a>
                     </li>
                     
                     </li>
