--- a/index.html
+++ b/index.html
@@ -29,17 +29,14 @@
                         <ul class="dropdown-menu dropdownmenu-dark">
                             <li><a class="dropdown-item" href="extracurriculars.html">Extracurriculars</a></li>
                             <li><a class="dropdown-item" href="experiences.html">Experience</a></li>
-                            <li><a class="dropdown-item" href="https://drive.google.com/file/d/1yu5LA78L0KZBI9Cdqjo_9QPJUhFnMzwo/view?usp=sharing">Resume</a></li>
                             <li><a class="dropdown-item" href="education.html">Education </a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="communityService.html">Community Service</a>
+                        <a class="nav-link text-white" href="https://drive.google.com/file/d/1yu5LA78L0KZBI9Cdqjo_9QPJUhFnMzwo/view?usp=sharing">Resume </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="certifications.html">Certifications</a>
-                    </li>
-                    
                     </li>
                 </ul>
             </div>
