Used a image-hosting website to upload images to fix images not showing up because of google photos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h1>Ian Gabriel C. Ramos</h1> 
                 </div>
                 <div class="col-sm-12 text-center">
-                    <img src="https://lh3.googleusercontent.com/pw/AP1GczNzPwuWwRtacpNDuU0SS7wsTtUK-PzGh8wxwcyDlqq2aj60m_jGUba7y5U0HOchE5zRRHYTI8p7zBOzlfuK-CX8ScdW-Re3EfYF0X-NyOKUYRtd4EueRBr2GhC9PYNqX2rS1kuIVzzfjJeWroCGco-4CdMtJxFLBn35Zl_TRYuynCWkQ4sM667mJFRodsT2b7XQm7MQdk8rR-dn2skW2jfarlJqCT8_L9EnhNi30a1ogFCppwFBgbGFF1AxFEkBL65X_UvSTKWJj6-tzyAjn0Kn9Y4hSUZcrFWVbXkeNHuUFVOAnDw_jcIoyWXi1Zu4geNHxfbTht6TJg7u1VPFk2V0-SwkYn7mx0X56vYL9FA4yVlN5_5oDIsumu3V3lNEUF16Tv20mc77X9K9MEpga72q7C2-L-05esHpyQ2P7bP-Wak4dRkw52_tr5xXibAW4LEO0339S8sAs52MvGawSj1y2M-d_Owdi-fw2fIXnxN6pkP5gPkJfcT1fsG06VSljTSwyg10FjxspglFqdWeOfX6SO-ZFv7fy6XIOq4t01yBj1vm6QqVm8ByTLRGoB1nb8YiKYXnapbvrhU6MnZzX-397XP4l4181_VhCz535_Cd1o0Z1_yO378xi6XWJN_PMxgL1kkwowU7t5s-wVv06jOnGO8kRFxBWDuFvzI3BnPfIwQFYNa_iq9n0RM9e-A6G4PwZaN1Mnn8XY_5Cf734kLVJW1pFUw6EpAGxH84nG54xBn9hvgfLHviNPXJMIZi891CPTZtXznuM33VKAqefpg95Qb9AEVa7T6xsfmBD2biPqloRHOKfbu7U1V90CrU7n3mmrxHJBi2UMkD1YkwXOgkqSr5r1vXaoRurBzjPz19CquDbE1Vn2qp_GzHw0eydRdVHIuR1R0rKvDTWinMSlMBeigKFbCSTOE0ptT7jeFdQUaw1Rz5Q7GFXmQsD25bvGuwFwQIrKHqJKB56G_DFwxFMgqk5UlnQp4Bmrxs8tiyhq4vbrRCCCRrknULVrZQXgAIKdYx-tvcZ4JHIGyEPF4JY-NvkbC7K5re=w1092-h1456-s-no-gm?authuser=0"
+                    <img src="https://e-portfolio.static.domains/Ian%20Gabriel%20Ramos%20(1).jpg"
                     height="300" width="225">
                 </div>
             </div>
