added captions and filled in information. Need to add pictures

--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -15,7 +15,7 @@
         <title>Extracurriculars</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
+    <body class="site">
         <nav class="navbar navbar-expand">
             <div class="container-fluid">
                 
@@ -28,7 +28,7 @@
                         <ul class="dropdown-menu dropdownmenu-dark">
                             <li><a class="dropdown-item current-link" href="extracurriculars.html">Extracurriculars</a></li>
                             <hr>
-                            <li><a class="dropdown-item current-link" href="experiences.html">Experience</a></li>
+                            <li><a class="dropdown-item" href="experiences.html">Experience</a></li>
                             <li><a class="dropdown-item" href="education.html">Education </a></li>
                         </ul>
                     </li>
@@ -50,41 +50,72 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 text-center">
-                    <h3>ClubName</h3>
-                    <p>Caption</p>
+                <div class="col-sm-6 text-center">
+                    <h3>Judo 2022 - 2023</h3>
+                    <p>
+                        Judo is a sport where people attempt to throw or pin each other get points to win. High school judo has team competitions and individual competitions.
+                        Judo was the first sport and club that I joined out of a whim during high school. It was a memorable experience given that I had to balance 
+                        going to practice everyday along with my academics and early college. Despite this, I still persevered and was able to practice
+                        judo for 2 seasons during my freshman and sophomore year. During judo, we had to endure physically taxing workouts, spars with other
+                        judokas, and the responsibility of going to every practice and competition. Through these experiences, I was able to learn how to 
+                        cooperate and grow with my team members in a more competitive sense while being able to challenge myself to take on more responsibilities
+                        besides school. Overall, judo was a great experience that taught me many life lessons like being consistent, building long lasting friendships
+                        through rivalries, and having discipline. 
+                    </p>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-sm-6">
                     <img src="">
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-sm-4 text-center">
-                    <h3>ClubName</h3>
-                    <p>Caption</p>
+                <div class="col-sm-6 text-center">
+                    <h3>Math Team 2022 - Present</h3>
+                    <p>Math team is a club which the members compete in math competitions which are all under the Oahu Math League (OML). 
+                       Math team was something I joined out of my interest for math and because I believed that I would do well since math is my strong suit, however,
+                       Math team definitely humbled me. The math problems that we had to solve made me realize that there are more math skills that I can learn and I still
+                       need to hone what I already know so that I become more accurate and quick at solving math problems. Nonetheless, I still enjoy the competitions because
+                       it challenges me while also tests me on my favorite subject. Additionally, it's enjoyable getting to know other people that share the same interest in math 
+                       as I do, sometimes people are even passionate about it. 
+                    </p>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-sm-6">
                     <img src="">
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-sm-4 text-center">
-                    <h3>ClubName</h3>
-                    <p>Caption</p>
+                <div class="col-sm-6 text-center">
+                    <h3>Phi Theta Kappa 2021 - Present</h3>
+                    <p>Phi Theta Kappa is a honor society that's at the collegiate level. PTK members are recognized for academic achievements
+                       and strive for scholarship, laedership, felllowship, and service. PTK offers these traits through various activities and events
+                       such as community service, PTK catalyst (an event that brings together members for professional development), scholarships offered by 
+                       PTK, and encourages members to uphold their membership by participating in their community that presents these traits. Through PTK,
+                       I started becoming more involved with my community. This is mainly because of the community service opportunities that were given 
+                       to the members and required community service hours. In addition to becoming more involved in my community, I was able to grow as a person.
+                       During some PTK events, there'd be professional speakers that helped to inspire and bring a new perspective on life that helped to encourage me to
+                       grow further. 
+                    </p>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-sm-6">
                     <img src="">
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-sm-4 text-center">
-                    <h3>ClubName</h3>
-                    <p>Caption</p>
+                <div class="col-sm-6 text-center">
+                    <h3>E-sports 2024 - Present</h3>
+                    <p>E-sports is another club that I joined because it piqued my interests greatly. Ever since I was a child, 
+                       I played video games a lot and always wanted to join a club that was about playing games. Being able to do that
+                       in high school while also making the game we play competitive gives me something to look forward to. I get to 
+                       play against people who are better than me so that I can improve my skills as well as socialize with people who also play
+                       the same games that I do. Although there's the stigma that video games are unhealthy and causes grades to drop, e-sports is 
+                       a great outlet for me to still be able to play games without getting so obsessed that my grades drop. If I want to be able to 
+                       play games afterschool without having to be stresesd, I make sure to finish my work and my grades are all good. E-sports is an
+                       enjoyable club that I love and helps to bring a sense of casuality to school. 
+                    </p>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-sm-6">
                     <img src="">
                 </div>
             </div>
