--- a/certifications.html
+++ b/certifications.html
@@ -45,7 +45,7 @@
         </nav>
         <main class="cover">
             <h1 class="text-center text-lg">Certifications</h1>
-                <div class="carousel certifications">
+                <div class="carousel" id="certifications">
                     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
