--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -50,8 +50,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 text-center">
-                    <h3>Judo 2022 - 2023</h3>
+                <div class="col-sm-5 text-center">
+                    <h3>Judo (2022 - 2023)</h3>
                     <p>
                         Judo is a sport where people attempt to throw or pin each other get points to win. High school judo has team competitions and individual competitions.
                         Judo was the first sport and club that I joined out of a whim during high school. It was a memorable experience given that I had to balance 
@@ -63,14 +63,34 @@
                         through rivalries, and having discipline. 
                     </p>
                 </div>
-                <div class="col-sm-6">
-                    <img src="">
+                <div class="col-sm-7"> 
+                    <div id="judo" class="carousel slide">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="https://e-portfolio.static.domains/DSC04446%20(1).jpeg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="https://e-portfolio.static.domains/DSC09116.jpeg" class="d-block w-45 center" height="500" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="https://e-portfolio.static.domains/DSC04893.jpeg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#judo" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#judo" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-sm-6 text-center">
-                    <h3>Math Team 2022 - Present</h3>
+                <div class="col-sm-5 text-center">
+                    <h3>Math Team (2022 - Present)</h3>
                     <p>Math team is a club which the members compete in math competitions which are all under the Oahu Math League (OML). 
                        Math team was something I joined out of my interest for math and because I believed that I would do well since math is my strong suit, however,
                        Math team definitely humbled me. The math problems that we had to solve made me realize that there are more math skills that I can learn and I still
@@ -79,14 +99,34 @@
                        as I do, sometimes people are even passionate about it. 
                     </p>
                 </div>
-                <div class="col-sm-6">
-                    <img src="">
+                <div class="col-sm-7">
+                    <div id="MathTeam" class="carousel slide">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="https://e-portfolio.static.domains/IMG_0306.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="https://e-portfolio.static.domains/Copy_of_IMG_6703.jpg" class="d-block w-100 center"  alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="https://e-portfolio.static.domains/Copy_of_IMG_5395.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#MathTeam" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#MathTeam" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-sm-6 text-center">
-                    <h3>Phi Theta Kappa 2021 - Present</h3>
+                <div class="col-sm-5 text-center">
+                    <h3>Phi Theta Kappa (2021 - Present)</h3>
                     <p>Phi Theta Kappa is a honor society that's at the collegiate level. PTK members are recognized for academic achievements
                        and strive for scholarship, laedership, felllowship, and service. PTK offers these traits through various activities and events
                        such as community service, PTK catalyst (an event that brings together members for professional development), scholarships offered by 
@@ -97,14 +137,40 @@
                        grow further. 
                     </p>
                 </div>
-                <div class="col-sm-6">
-                    <img src="">
+                <div class="col-sm-7">
+                    <div id="PTK" class="carousel slide">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="https://e-portfolio.static.domains/Copy%20of%20IMG_8810.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="https://e-portfolio.static.domains/Copy%20of%20IMG_6259.jpg" class="d-block w-100 center"  alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="https://e-portfolio.static.domains/Copy%20of%20IMG_8811.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="https://e-portfolio.static.domains/Copy_of_IMG_0534.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="https://e-portfolio.static.domains/Copy_of_IMG_0531.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#PTK" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#PTK" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-sm-6 text-center">
-                    <h3>E-sports 2024 - Present</h3>
+                <div class="col-sm-12 text-center">
+                    <h3>E-sports (2024 - Present)</h3>
                     <p>E-sports is another club that I joined because it piqued my interests greatly. Ever since I was a child, 
                        I played video games a lot and always wanted to join a club that was about playing games. Being able to do that
                        in high school while also making the game we play competitive gives me something to look forward to. I get to 
@@ -114,9 +180,6 @@
                        play games afterschool without having to be stresesd, I make sure to finish my work and my grades are all good. E-sports is an
                        enjoyable club that I love and helps to bring a sense of casuality to school. 
                     </p>
-                </div>
-                <div class="col-sm-6">
-                    <img src="">
                 </div>
             </div>
             <hr>
